# serviceapp

./: configure.ac  enigma2-plugin-extensions-serviceapp.bb  enigma2-plugin-extensions-serviceapp_0.1.bb  enigma2-plugin-extensions-serviceapp_0.4.bb  enigma2-plugin-extensions-serviceapp_0.5.bb  enigma2-plugin-systemplugins-serviceapp.bb  serviceapp.pro
src/: Makefile.am
src/locale/: Makefile.am  ServiceApp.pot  de.po  en.po  fr.po  hu.po  it.po  lv.po  nl.po  pt.po  ru.po  tr.po  uk.po  updateallpo.sh
src/plugin/: Makefile.am  ServiceApp.pot  __init__.py  plugin.py  serviceapp_client.py
src/serviceapp/: Makefile.am  common.cpp  common.h  exteplayer3.cpp  exteplayer3.h  extplayer.cpp  extplayer.h  gstplayer.cpp  gstplayer.h  m3u8.cpp  m3u8.h  myconsole.cpp  myconsole.h  scriptrun.cpp  scriptrun.h  serviceapp.cpp  serviceapp.h  wrappers.cpp  wrappers.h
src/serviceapp/subtitles/: subrip.cpp  subrip.h  subtitles.cpp  subtitles.h
test/: Makefile  explore_m3u8.cpp  wrappers.cpp
